# experimentvrp

./: .gitlab-ci.yml  CMakeLists.txt  appveyor.yml
.github/workflows/: boost_version.yml  clang.yml  macos.yml  ubuntu.yml
ci/appveyor/: install.bat
ci/winnie/: build_pgrouting.sh
doc/: conf.py.in
doc/general-doc/: installation.rst  release_notes.rst  support.rst
doc/pickDeliver/: CMakeLists.txt  VRP-category.rst
docqueries/pickDeliver/: CMakeLists.txt  doc-pgr_vrpOneDepot.result  test.conf
docqueries/version/: doc-full_version.result
include/cpp_common/: Dmatrix.h  basePath_SSEC.hpp  basic_edge.h  basic_vertex.h  bpoint.hpp  identifier.h  pgr_base_graph.hpp  pgr_messages.h  rule.h  xy_vertex.h
include/dijkstra/: pgr_dijkstra.hpp
include/tsp/: tour.h
include/visitors/: dfs_visitor_with_root.hpp  dijkstra_one_goal_visitor.hpp  edges_order_bfs_visitor.hpp  edges_order_dfs_visitor.hpp  found_goals.hpp  prim_dijkstra_visitor.hpp
include/vrp/: book_keeping.h  pgr_pickDeliver.h
sql/pickDeliver/: CMakeLists.txt  _oneDepot.sql
sql/sigs/: vrprouting--0.0.sig
src/cpp_common/: CMakeLists.txt  Dmatrix.cpp  basePath_SSEC.cpp
src/pickDeliver/: book_keeping.cpp  pgr_pickDeliver.cpp  pickDeliverEuclidean_driver.cpp  pickDeliver_driver.cpp
src/version/: CMakeLists.txt  full_version.c
